--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -36,7 +36,12 @@
                 <button onclick="deleteBookByName()" class="delete-btn">Delete Book</button>
             </div>
         </div>
-        
+        <div id="deletePopup" class="popup hidden">
+            <div class="popup-content">
+              🗑️ Book deleted successfully!
+            </div>
+        </div>
+          
 
         <table>
             <thead>
