--- a/frontend/main.html
+++ b/frontend/main.html
@@ -44,7 +44,8 @@
       <p>✅ Login successful!</p>
     </div>
   </div>
-  
+  <div id="successPopup" class="popup hidden"></div>
+
 
   <!-- ✅ External script handles login logic -->
   <script src="script.js"></script>
