--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -42,11 +42,11 @@
             </div>
         </div>
         <div id="deletePopup" class="popup hidden">
-            <div class="popup-content">
-              🗑️ Book deleted successfully!
-            </div>
+            <!-- Popup for Success/Failure messages -->
         </div>
-          
+        <div id="successPopup" class="popup hidden">
+            <div class="popup-content" id="popupMessage"></div>
+        </div>
 
         <table>
             <thead>
