--- a/frontend/transactions.html
+++ b/frontend/transactions.html
@@ -249,6 +249,6 @@
       </table>
     </section>
   
-    <script src="transactions.js"></script> <!-- External JS link -->
+    <script src="transaction.js"></script> <!-- External JS link -->
   </body>
   </html>
