--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -38,7 +38,9 @@
             <div class="section delete-section">
                 <h3>Delete a Book</h3>
                 <input type="text" id="deleteBookName" placeholder="Enter Book Name to Delete">
-                <button onclick="deleteBookByName()" class="delete-btn">Delete Book</button>
+                
+                <button onclick="deleteBookByTitle()" class="delete-btn">Delete Book</button>
+
             </div>
         </div>
         <div id="deletePopup" class="popup hidden">
