--- a/frontend/transactions.html
+++ b/frontend/transactions.html
@@ -75,9 +75,11 @@
         /* Flex container for forms */
         .transaction-container {
             display: flex;
-            justify-content: space-around;
+            justify-content: center; /* Changed from space-around to center */
+            gap: 20px; /* Add a gap between the two forms */
             margin: 20px;
         }
+        
 
         /* Form style */
         .transaction-form {
