--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -53,9 +53,10 @@
         <table>
             <thead>
                 <tr>
+                    <th>📚 Book ID</th>
                     <th>📖 Book Name</th>
                     <th>✍ Author</th>
-                    <th>⚙ Actions</th>
+                    
                 </tr>
             </thead>
             <tbody id="bookList">
