--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -54,7 +54,11 @@
             <thead>
                 <tr>
                     <th>📚 Book ID</th>
-                    <th>📖 Book Name</th>
+                    <th>📖 Book Name 
+                        <span id="searchToggle" style="cursor:pointer; margin-left:8px;">🔍</span>
+                        <input type="text" id="searchInput" placeholder="Search..." style="display:none; margin-top:5px; width:90%; font-size:13px; padding:4px; border-radius:4px;">
+
+                    </th>
                     <th>✍ Author</th>
                     
                 </tr>
