--- a/frontend/register.html
+++ b/frontend/register.html
@@ -60,7 +60,7 @@
       event.preventDefault();
 
       const payload = {
-        studentName: document.getElementById("studentName").value,
+        name: document.getElementById("studentName").value,
         email: document.getElementById("studentEmail").value,
         password: document.getElementById("studentPassword").value
       };
